k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrd-admin
spec:
  ports:
  - port: 80
  selector:
    app: vrd-admin
